--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,7 @@
 set -sg escape-time 1
 set -g base-index 1
 setw -g pane-base-index 1
+set -g default-terminal "tmux-256color"
 
 #Mouse works as expected
 set -g mouse on
@@ -19,6 +20,12 @@ bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection
 bind-key -T copy-mode-vi 'Space' send -X halfpage-down
 bind-key -T copy-mode-vi 'Bspace' send -X halfpage-up
+
+#change the prefix
+unbind C-b
+set -g prefix C-x
+bind C-x send-prefix
+
 
 # extra commands for interacting with the ICCCM clipboard
 bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
@@ -52,6 +59,6 @@ bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft=
 set -s escape-time 0
 
 #top position
-set-option -g status-position top
+#set-option -g status-position top
 set -g status-bg black 
 set -g status-fg white
